few animations added

--- a/Polaris_v2/sass/base/_base.scss
+++ b/Polaris_v2/sass/base/_base.scss
@@ -26,8 +26,13 @@ body {
     margin: 0 auto;
 }
 
-section {
-    margin: 10rem 0;
+.section {
+    margin: 7rem 0;
+    opacity: 0;
+
+    &--show {
+        opacity: 1;
+    }
 }
 
 .container {
