--- a/Polaris_v2/css/style.css
+++ b/Polaris_v2/css/style.css
@@ -19,7 +19,7 @@ $breakpoint arguement choices:
 
 html {
   font-size: 62.5%; }
-  @media (max-width: 900px) {
+  @media (max-width: 1024px) {
     html {
       font-size: 50%; } }
 
@@ -32,8 +32,11 @@ body {
   width: 90%;
   margin: 0 auto; }
 
-section {
-  margin: 10rem 0; }
+.section {
+  margin: 7rem 0;
+  opacity: 0; }
+  .section--show {
+    opacity: 1; }
 
 .container {
   max-width: 114rem;
@@ -216,6 +219,8 @@ body {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url("../img/hero-10.jpg"); }
   .header__sports {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url("../img/hero-11.jpg"); }
+  .header__department {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url("../img/hero-12.jpg"); }
 
 .navigation {
   position: fixed;
@@ -225,7 +230,10 @@ body {
   z-index: 9999;
   width: 100%;
   height: 7rem;
-  background-color: #3AA618; }
+  background-color: #3AA618;
+  -webkit-box-shadow: 0 6px 6px -6px #000;
+  -moz-box-shadow: 0 6px 6px -6px #000;
+  box-shadow: 0 6px 6px -6px #000; }
   .navigation__checkbox {
     display: none; }
   .navigation__logo-box {
@@ -236,7 +244,7 @@ body {
     @media (max-width: 1200px) {
       .navigation__logo-box {
         left: 3%; } }
-    @media (max-width: 900px) {
+    @media (max-width: 1024px) {
       .navigation__logo-box {
         left: 5%; } }
   .navigation__logo {
@@ -269,7 +277,7 @@ body {
     transition: all .2s; }
   .navigation__link:hover, .navigation__link:active {
     color: #1A6A00; }
-  @media (max-width: 900px) {
+  @media (max-width: 1024px) {
     .navigation__button {
       background-color: #3AA618;
       height: 4rem;
@@ -323,7 +331,7 @@ body {
       transform: rotate(-135deg); }
     .navigation__nav {
       z-index: 1500;
-      top: -30rem;
+      top: -40rem;
       left: 0;
       opacity: 0;
       height: 0;
@@ -342,7 +350,8 @@ body {
     .navigation__checkbox:checked ~ .navigation__nav {
       opacity: 1;
       height: 100%;
-      top: 6rem; } }
+      top: 5rem;
+      left: 0.8rem; } }
 
 .dev {
   text-align: center; }
@@ -357,6 +366,8 @@ body {
     width: 100%;
     transform: scale(1.2);
     transition: all .5s; }
+    .dev__img--president {
+      transform: scale(1.2) translateY(5%); }
   .dev__caption {
     position: absolute;
     top: 50%;
@@ -439,7 +450,7 @@ body {
   color: #1A6A00;
   cursor: pointer; }
 
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   .dropdown {
     transition: all .2s;
     padding: 1.2rem 1.5rem; }
@@ -472,6 +483,15 @@ body {
     text-align: left;
     background-color: #3AA618;
     color: #fff; }
+
+.intro__text, .fractal__text, .grade__text, .intro-cse__text, .intro-ee__text, .intro-me__text, .common__text {
+  text-align: justify;
+  font-size: 1.7rem;
+  word-spacing: 3px;
+  font-weight: 300; }
+
+.intro__table th, .intro__table td, .fractal__table th, .fractal__table td, .grade__table th, .grade__table td, .intro-cse__table th, .intro-cse__table td, .intro-ee__table th, .intro-ee__table td, .intro-me__table th, .intro-me__table td, .common__table th, .common__table td {
+  text-align: center; }
 
 .around__text, .transportation__text, .restaurants__text, .entertainment__text, .stores__text {
   text-align: justify;
