--- a/Polaris_v2/sass/layout/_header.scss
+++ b/Polaris_v2/sass/layout/_header.scss
@@ -57,6 +57,8 @@
         background-image: linear-gradient(to bottom, rgba($color-black, .1), rgba($color-black, .7)), url('../img/hero-11.jpg');
     }
 
-    
+    &__department {
+        background-image: linear-gradient(to bottom, rgba($color-black, .1), rgba($color-black, .7)), url('../img/hero-12.jpg');
+    }    
 
 }
