--- a/Polaris_v2/sass/layout/_navbar.scss
+++ b/Polaris_v2/sass/layout/_navbar.scss
@@ -6,7 +6,12 @@
     z-index: 9999;
     width: 100%;
     height: 7rem;
+
     background-color: $color-primary;
+    -webkit-box-shadow: 0 6px 6px -6px $color-black;
+    -moz-box-shadow: 0 6px 6px -6px $color-black;
+    box-shadow: 0 6px 6px -6px $color-black;
+     
 
     &__checkbox {
         display: none;
@@ -164,7 +169,7 @@
 
         &__nav {
             z-index: 1500;
-            top: -30rem;
+            top: -40rem;
             left: 0;
             opacity: 0;
             height: 0;
@@ -201,7 +206,8 @@
         &__checkbox:checked ~ &__nav {
             opacity: 1;
             height: 100%;
-            top: 6rem;
+            top: 5rem;
+            left: 0.8rem;
         }
     }
 
