--- a/Polaris_v2/sass/main.scss
+++ b/Polaris_v2/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/dropdown";
 @import "components/table";
 
+@import "pages/academics";
 @import "pages/around";
 @import "pages/cultural";
 @import "pages/home";
